# SAMD21

./: .clang-format  .gitattributes  .gitignore  .toolchain_samd21g18a.cmake.swp  CMakeLists.txt  Dockerfile  Makefile  README.md  flashbin.jlink  main.c  todo.txt  toolchain_samd21g18a.cmake  uncrustify.cfg
Configurations/: ProjectDefinitions.cmake
Configurations/SAMD21/: samd21g18a_flash.ld  toolchain_samd21g18a.cmake
Libraries/BufferPool/: CMakeLists.txt
Libraries/cmsis-core/: CMakeLists.txt
Libraries/cmsis-core-samcortexm0p-samd21/: CMakeLists.txt
Libraries/samd21-bsp/: CMakeLists.txt  Makefile
Libraries/samd21-bsp/config/: .config  Config.in
Libraries/samd21-bsp/config/peripherals/: Config.in
Libraries/samd21-bsp/config/peripherals/clock/: Config.in
Libraries/samd21-bsp/peripherals/: CMakeLists.txt  cmakeconfig.h.in
Libraries/samd21-bsp/peripherals/include/: clock.h  config.h  error.h  gclk.h
Libraries/samd21-bsp/peripherals/src/: clock.c  clock.h  clock_private.h  gclk.c
Project/: CMakeLists.txt
Project/app/: main.c
Project/hal/: system_samd21.c
Project/hal/init/samd21/: startup_samd21.c
app/example-app/: CMakeLists.txt
app/example-app/src/: main.c
app/hal-test/: CMakeLists.txt
app/hal-test/src/: main.cpp
board/SAMD21/: samd21g18a_flash.ld
cmake/: FindFreeRTOS.cmake  FindGoogleTest.cmake  ProjectDefinitions.cmake
config/HostCI/: CMakeLists.txt
config/TargetDebug/: CMakeLists.txt
lib/BufferPool/: CMakeLists.txt
lib/BufferPool/public/: BufferPool.h
lib/BufferPool/src/: BufferPool.c
lib/FreeRTOS/Source/portable/GCC/ARM_CM0/: port.c
lib/SAMD21/: samd21g18a_flash.ld  system_samd21.c
lib/cmsis-core/: CMakeLists.txt
lib/cmsis-core-samcortexm0p-samd21/: CMakeLists.txt
lib/common/: CMakeLists.txt  cmakeconfig.h.in
lib/common/include/common/: allocator.hpp  array.hpp  environment.hpp  error.hpp  fixed_width_int.hpp  id_traits.hpp  io_port.hpp  iterator.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  register.hpp  sequence_iterator.hpp  vector.hpp
lib/common/src/: irq.cpp
lib/common/test/: CMakeLists.txt
lib/common/test/src/: io_port_test.cpp  main.cpp  register_test.cpp
lib/common/tests/: CMakeLists.txt
lib/common/tests/src/: array_test.cpp  io_port_test.cpp  list_test.cpp  map_test.cpp  vector_test.cpp
lib/config/: CMakeLists.txt
lib/drivers/platform/include/drivers/: platform.hpp
lib/hal/: CMakeLists.txt
lib/hal/include/clock/: clock_base.hpp  clock_definitions.hpp  clock_source_generic.hpp  dfll48m.hpp  osc8m.hpp  xosc32k.hpp
lib/hal/include/clock/impl/: dfll48m.hpp  generic_clock.hpp  osc8m.hpp  sim_clock.hpp  xosc32k.hpp
lib/hal/include/clock/samd/: dfll48m.hpp  generic_clock.hpp  osc8m.hpp  xosc32k.hpp
lib/hal/include/clock/sim/: sim_clock.hpp
lib/hal/include/irq/: interrupt_manager_base.hpp
lib/hal/include/irq/samd/: interrupt_manager_samd.hpp
lib/hal/include/platform/: definitions.hpp
lib/hal/include/port/: pin.hpp  pin_configuration.hpp  port_manager.hpp
lib/hal/include/serial/: sercom_base.hpp  usart.hpp
lib/hal/src/: clock.c  sercom.c  sercom_private.h
lib/hal/src/clock/: clock_base.cpp  clock_source_generic.cpp  dfll48m.cpp  generic_clock.cpp  osc8m.cpp  xosc32k.cpp
lib/hal/src/clock/samd/: dfll48m.cpp  generic_clock.cpp  osc8m.cpp  xosc32k.cpp
lib/hal/src/clock/sim/: sim_clock.cpp
lib/hal/src/irq/samd/: interrupt_manager_samd.cpp
lib/hal/src/port/: pin.cpp  pin_configuration.cpp  port_manager.cpp
lib/hal/src/serial/: sercom_base.cpp  usart.cpp
lib/hal_utils/: CMakeLists.txt
lib/hal_utils/include/hal_utils/: io_port.hpp  irq.hpp  register.hpp
lib/hal_utils/src/: irq.cpp
lib/hal_utils/tests/: CMakeLists.txt
lib/hal_utils/tests/src/: io_port_test.cpp  register_test.cpp
lib/peripherals/: CMakeLists.txt
lib/peripherals/include/: sercom.h
lib/peripherals/include/clock/: clock_source_generic.hpp  dfll48m.hpp  osc8m.hpp  xosc32k.hpp
lib/peripherals/src/: usart.c
lib/peripherals/src/clock/: clock_source_generic.cpp  osc8m.cpp
res/linker_files/: samd21g18a_flash.ld
samd21-bsp/: CMakeLists.txt
samd21-bsp/config/: .config
samd21-bsp/peripherals/: CMakeLists.txt
samd21-bsp/peripherals/src/: clock_private.h
samd21-freertos/: CMakeLists.txt
samd21-freertos/config/peripherals/: Config.in
samd21-freertos/example-app/: CMakeLists.txt
samd21-freertos/peripherals/: CMakeLists.txt
samd21-freertos/peripherals/include/: config.h  error.h  gclk.h  port.h  uart.h  usart.h
samd21-freertos/peripherals/src/: clock.c  clock_private.h  gclk.c  port.c  sercom.c  sercom_private.h  uart.c  usart.c
src/: FreeRTOSConfig.h  main.c  task_blink.c
src/Config/: FreeRTOSConfig.h  PortMapping.h  SAMD21G18A.h
src/Drivers/: PortIO.c  PortIO.h  UART.c  UART.h
src/Helpers/: BufferManager.c  BufferManager.h  BufferPool.c  BufferPool.h  Error.c  Error.h  LinkedList.c  LinkedList.h
src/Tasks/: TaskBlink.c  TaskBlink.h
src/config/: FreeRTOSConfig.h  GlobalConfig.h
src/hal/: UART.c  UART.h
src/helpers/: BufferPool.c  BufferPool.h  Error.c  Error.h  HDLCPacket.c  PacketManager.c  PacketManager.h  PacketType.h  TextPacket.c
src/irq/: IRQ.h  SercomHandler.c
src/tasks/: TaskRX.c  TaskRX.h  TaskTX.c  TaskTX.h
